--- a/src/assets/css/editor.css
+++ b/src/assets/css/editor.css
@@ -176,7 +176,39 @@ form .row input, form .row textarea, form .row select {
   color: #aaaaaa;
   direction: rtl;
 }
+/* ================================*/
 
+/* ================================*/
+/* COLLAPSIBLE LIST                */
+/* ================================*/
+button.collapsible-list {
+  padding: 0px;
+  margin: 0px 5px 0px 0px;
+  width: 20px;
+  height: 20px;
+  font-size: 1.5em;
+  color: #333333;
+  background-color: #ffffff;
+  float: left;
+}
+
+div.collapsible-list {
+  margin: 5px 0px;
+}
+div.collapsible-list-items {
+  padding-left: 5px;
+  border-left: #868686 solid 1px;
+/*   overflow: hidden; */
+  overflow-y: hidden;
+  overflow-x: visible;
+  transition: max-height ease-out 0.5s;
+}
+
+div.collapsible-list-items.hidden {
+  max-height: 0px !important;
+/*   overflow: hidden; */
+}
+/* ================================*/
 
 /* ================================*/
 /* TOPBAR                          */
@@ -529,40 +561,9 @@ form .row input, form .row textarea, form .row select {
 
 
 /* ================================*/
-/* DIRECTORY LIST                  */
+/* DIRECTORY LIST HEADER           */
 /* ================================*/
-.directory-list {
-  list-style: none;
-  padding: 0px;
-  margin: 0px;
-  margin-bottom: 10px;
-  text-align: left;
-}
-.directory-list li {
-  padding: 0px;
-  margin: 0px;
-}
-.directory-list a {
-  padding: 2px 0px 2px 10px;
-  color: #333333;
-  text-decoration: none;
-  display: block;
-}
-.directory-list a.selected {
-  font-weight: 600;  
-  /*background-color: #606060;*/
-  /*pointer-events: none;*/
-  /*cursor: default;*/
-}
-.directory-list .empty {
-  padding: 2px 0px 2px 10px;
-  color: #ACACAC;
-  display: block;
-}
-.directory-list a:hover {
-  background-color: #ffffff;
-}
-.directory-list a.header {
+.directory-list-header {
   font-weight: 600;
   color: #333333;
   font-size: 1.5em;
@@ -570,37 +571,178 @@ form .row input, form .row textarea, form .row select {
   border-color: #333333;
   border-style: none none solid;
 }
-.directory-list a.header:hover {
+.directory-list-header:hover {
   background-color: inherit;
 }
-.directory-list a.category {
-  font-weight: 600;
-  color: #333333;
-  font-size: 1.1em;
-}
-.directory-list .edit {
+.directory-list-header .edit {
   padding: 0px 10px;
   margin: 0px 2px;
   font-weight: 100;
   background-color: #ffffff;
   color: #333333;
 }
-.directory-list .new-node {
+.directory-list-header .new-node {
   padding: 0px 10px;
   margin: 0px 2px;
   font-weight: 100;
 }
-.directory-list span.edit {
+.directory-list-header span.edit {
   padding: 0px;
   margin: 0px;
 }
-.directory-list .not-in-project {
+.directory-list-header .not-in-project {
   font-weight: 100;
   font-style: italic;
   color: #acacac;
 }
-.directory-list .save-marker {
+.directory-list-header .save-marker {
   font-size: 1.5em;
+  color: #f04124;
+  padding-right: 3px;
+}
+/* ================================*/
+
+/* ================================*/
+/* NODE LIST                       */
+/* ================================*/
+.node-list {
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+.node-list .item {
+  padding: 2px;
+  margin: 2px;
+  border: 1px solid #333333;
+}
+.node-list a {
+  padding: 2px 0px 2px 10px;
+  color: #333333;
+  text-decoration: none;
+  display: block;
+}
+.node-list a.selected {
+  font-weight: 600;  
+  /*background-color: #606060;*/
+  /*pointer-events: none;*/
+  /*cursor: default;*/
+}
+.node-list .empty {
+  padding: 2px 0px 2px 10px;
+  color: #ACACAC;
+  display: block;
+}
+.node-list a:hover {
+  background-color: #ffffff;
+}
+.node-list a.header {
+  text-transform: uppercase;
+  padding: 3px 0px;
+  margin-bottom: 1px;  /* Keeps the stuff below from being shoved out of the way by floating buttons. */
+  font-weight: 600!important;
+  color: #333333;
+  font-size: 1.2em;
+  border-style: none;
+}
+.node-list a.header:hover {
+  background-color: inherit;
+}
+.node-list a.category {
+  font-weight: 600;
+  color: #333333;
+  font-size: 1.1em;
+  margin-bottom: 2px;  /* Keeps the stuff below from being shoved out of the way by floating buttons. */
+}
+.node-list .edit {
+  padding: 0px 5px;
+  margin: 0px 1px;
+  background-color: #ffffff;
+  color: #333333;
+}
+.node-list .new-node {
+  position: relative;
+  bottom: 2px;
+  padding: 2px 5px;
+  margin: 0px 1px;
+}
+.node-list .save-marker {
+  color: #f04124;
+  padding-right: 3px;
+}
+.node-list .collapsible-list-items {
+  padding-left: 0px;
+  border-style: none;
+}
+/* ================================*/
+
+/* ================================*/
+/* TYPE LIST                       */
+/* ================================*/
+.type-list {
+  padding: 0px;
+  margin: 0px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+.type-list li {
+  padding: 0px;
+  margin: 0px;
+}
+.type-list li ul li {
+  padding: 2px;
+  margin: 2px;
+  border: 1px solid #333333;
+}
+.type-list a {
+  padding: 2px 0px 2px 10px;
+  color: #333333;
+  text-decoration: none;
+  display: block;
+}
+.type-list a.selected {
+  font-weight: 600;  
+  /*background-color: #606060;*/
+  /*pointer-events: none;*/
+  /*cursor: default;*/
+}
+.type-list .empty {
+  padding: 2px 0px 2px 10px;
+  color: #ACACAC;
+  display: block;
+}
+.type-list a:hover {
+  background-color: #ffffff;
+}
+.type-list a.header {
+  text-transform: uppercase;
+  padding: 3px 0px;
+  font-weight: 600;
+  color: #333333;
+  font-size: 1.2em;
+  border-style: none;
+}
+.type-list a.header:hover {
+  background-color: inherit;
+}
+.type-list a.category {
+  font-weight: 600;
+  color: #333333;
+  font-size: 1.1em;
+}
+.type-list .edit {
+  padding: 0px 5px;
+  margin: 0px 1px;
+  background-color: #ffffff;
+  color: #333333;
+}
+.type-list .new-node {
+  position: relative;
+  bottom: 1px;
+  padding: 2px 5px;
+  margin: 0px 1px;
+}
+.type-list .save-marker {
   color: #f04124;
   padding-right: 3px;
 }
