Expand All and Collapse All menu buttons

--- a/src/app/menu/menu.html
+++ b/src/app/menu/menu.html
@@ -38,6 +38,9 @@
           <li class="divider"></li>
           <li><a ng-click="onButtonZoomIn()" href="#">Zoom In<span class="shortcut">{{key_zoom_in}}</span></a></li>
           <li><a ng-click="onButtonZoomOut()" href="#">Zoom Out<span class="shortcut">{{key_zoom_out}}</span></a></li>
+          <li class="divider"></li>
+          <li><a ng-click="onButtonCollapseAll()" href="#">Collapse All</a></li>
+          <li><a ng-click="onButtonExpandAll()" href="#">Expand All</a></li>
         </ul>
       </li>
       <li><a href="#">Selection</a>
