Make the list of trees display as a bar at the top

--- a/src/app/filename/filename.html
+++ b/src/app/filename/filename.html
@@ -1,4 +1,4 @@
-<div class="filename-display" ng-controller="FilenameController">
+<div class="filename-display">
   <div class="save-status-display" ng-hide="isSaved">*</div>
   <div class="treename-display">{{treeName}}</div>
   <div ng-show="path" class="path-display">{{path}}</div>
