--- a/src/app/property/property.html
+++ b/src/app/property/property.html
@@ -1,58 +1,80 @@
-<div id="property-panel" class="property-panel panel" scrollable>
-
-  <div ng-show="screen === SCRN_UNSELECTED">
-    <p style="text-align:center">Select a <strong>single</strong> block to change its properties.</p>
-  </div>
-
-  <div ng-show="screen === SCRN_UNREGISTERED">
-    <p style="text-align:center">This node has no corresponding definition in the editor.</p>
-    <p style="text-align:center">To define it, import it using the 'Import Nodes' button under 'File' or add a node definition for it.</p>
-    <p style="text-align:center">Modules can be defined by opening them in the editor.</p>
-  </div>
-
-  <div ng-show="screen === SCRN_INVALID">
-    <p style="text-align:center">This node's type conflicts with the type given in the corresponding definition.</p>
-    <p style="text-align:center">You should either remove this node and make a new one or correct the type of the node definition.</p>
-  </div>
-
-  <div ng-hide="screen === SCRN_SELECTED">
-    <p style="text-align:center"><em>NOTE: The root node represents a tree. Therefore, changes applied to this node will persist on the tree object.</em></p>
-  </div>
-
-  <div ng-show="screen === SCRN_SELECTED">
-    <form>
-      <div class="row">
-        <label>Name</label>
-        <input id="name" type="text" placeholder="name" readonly/>
-      </div>
-
-      <div class="row">
-        <label>Title</label>
-        <input id="title" type="text" onchange="element(this).updateProperties(this)" onkeyup="element(this).markForChange(this)" placeholder="title"/>
-      </div>
-
-      <div class="row">
-        <label class="clearfix">
-          <span class="left">Properties</span>
-          <a href="#" ng-click="addRootProperty()" ng-show="block.type == 'root'" class="button success right">+</a>
+<table class="property">
+  <tbody>
+    <tr>
+      <td>Key</td>
+      <td>
+        <label id="prop-name">
+          {{propName}}<span class="property-type">: {{type}}</span>
         </label>
+      </td>
+      <td class="balloon-container">
+      </td>
+    </tr>
+    <tr>
+      <td><input id="uses-key" type="checkbox" ng-model="usesKeyInput" onchange="element(this).onChange(this); element(this).onInput(this)"></td>
+      <td colspan="2">
+        <input id="key" type="text" placeholder="key" ng-show="usesKeyInput" b3-property-change-listener>
+        <span ng-hide="usesKeyInput" id="value">
+          <input id="value-string" type="text" placeholder="value" ng-show="type == 'string'" b3-property-change-listener>
+          <div ng-show="type == 'position'">
+            <label for="value-position-x" class="sub">X:</label>
+            <input id="value-position-x" type="text" placeholder="jsonValue" class="coords" b3-property-change-listener>
+            <label for="value-position-y" class="sub">Y:</label>
+            <input id="value-position-y" type="text" placeholder="jsonValue" class="coords" b3-property-change-listener>
+          </div>
+          <div ng-show="type == 'vec2'">
+            <label for="value-vec2-x" class="sub">X:</label>
+            <input id="value-vec2-x" type="text" placeholder="jsonValue" class="coords" b3-property-change-listener>
+            <label for="value-vec2-y" class="sub">Y:</label>
+            <input id="value-vec2-y" type="text" placeholder="jsonValue" class="coords" b3-property-change-listener>
+          </div>
+          <div ng-show="type == 'list'">
+            <a href="#" ng-click="addListItem('value-list'); onInput()" class="button success right">+</a>
 
-        <table id="property-properties-table">
-          <tbody>
-          </tbody>
-        </table>
-      </div>
+            <table id="value-list" class="data-aggregate">
+              <tbody>
+                <!-- Items are dynamically inserted here -->
+              </tbody>
+            </table>
+          </div>
+          <div ng-show="type == 'json'">
+            <a href="#" ng-click="addJSONPair('value-json'); onInput()" class="button success right">+</a>
 
-      <div class="row">
-        <label class="clearfix">
-          <span class="left">Output</span>
-        </label>
+            <table id="value-json" class="data-aggregate data-json">
+              <tbody>
+                <!-- Items are dynamically inserted here -->
+              </tbody>
+            </table>
+          </div>
+          <div ng-show="type == 'table'">
+            <label for="is-numbered">Numbered: </label>
+            <input id="is-numbered" type="checkbox" ng-model="tableIsNumbered" onchange="element(this).onInput(this); element(this).onChange(this)">
 
-        <table id="property-output-table">
-          <tbody>
-          </tbody>
-        </table>
-      </div>
-    </form>
-  </div>
-</div>
+            <div ng-show="tableIsNumbered">
+              <a href="#" ng-click="addListItem('value-table-list'); onInput()" class="button success right">+</a>
+
+              <table id="value-table-list" class="data-aggregate">
+                <tbody>
+                  <!-- Items are dynamically inserted here -->
+                </tbody>
+              </table>
+            </div>
+            <div ng-hide="tableIsNumbered">
+              <a href="#" ng-click="addJSONPair('value-table-json'); onInput()" class="button success right">+</a>
+
+              <table id="value-table-json" class="data-aggregate data-json">
+                <tbody>
+                  <!-- Items are dynamically inserted here -->
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <input id="value-entity" type="text" placeholder="value" ng-show="type == 'entity'" b3-property-change-listener>
+          <input id="value-bool" type="checkbox" ng-show="type == 'bool'" onchange="element(this).onInput(this); element(this).onChange(this)">
+          <input id="value-number" type="text" placeholder="value" ng-show="type == 'number'" b3-property-change-listener>
+        </span>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<!-- <button ng-click="showContents()">Show Contents</button> -->
